# Cybo-Track

./: .gitignore  LICENSE  PROJECT_SUMMARY.md  README.md  package.json  pnpm-lock.yaml  sc.js  tsconfig.json
apps/desktop/: TAURI_SETUP.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/: Layout.tsx
apps/desktop/src/context/: AppContext.tsx
apps/desktop/src/pages/: Auth.tsx  GoalDetail.tsx  Goals.tsx  Home.tsx  NewGoal.tsx  Settings.tsx  Stats.tsx
apps/desktop/src/services/: database.ts  databasePlugin.ts  mockDatabase.ts  supabase.ts  tauriDatabase.ts
apps/desktop/src/styles/: Auth.css  GoalDetail.css  Goals.css  Home.css  Layout.css  NewGoal.css  Settings.css  Stats.css  index.css
apps/mobile/: app.json  metro.config.js  package.json  tsconfig.json
apps/mobile/app/: _layout.tsx  auth.tsx  index.tsx
apps/mobile/app/(tabs)/: _layout.tsx  goals.tsx  home.tsx  settings.tsx  stats.tsx
apps/mobile/app/goal/: [id].tsx  new.tsx
apps/mobile/src/context/: AppContext.tsx
apps/mobile/src/database/: db.ts  mockDb.ts  schema.ts
apps/mobile/src/services/: supabase.ts  syncService.ts
